<resources>

    <string name="progressdialog_title">正在加载</string>
    <string name="app_name">阿里OCR</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_work">WorkActivity</string>
    <string name="title_activity_new_house">NewHouseActivity</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="category_home">首页</string>
    <string name="category_channel">在线挂号</string>
    <string name="category_search">健康档案</string>
    <string name="category_account">预约查体</string>
    <string name="category_more">更多</string>
    <string name="HomeNews">济南楼市再现红五月成定局</string>
    <string name="cityname">济南</string>
    <string name="title_activity_news_list">NewsList</string>
    <!-- TabNewsActivity -->
    <string name="title_news_category_tops">头条</string>
    <string name="title_news_category_sport">体育</string>
    <string name="title_news_category_play">娱乐</string>
    <string name="title_news_category_finance">财经</string>
    <string name="title_news_category_science">科技</string>
    <string name="title_news_category_more">更多</string>
    <string name="title_activity_news_detail">NewsDetail</string>
    <string name="title_activity_old_house_list">OldHouseList</string>
    <string name="title_activity_old_house_detail">OldHouseDetail</string>
    <!-- 滑动区域文字及链接 -->
    <string name="title1"></string>
    <string name="title2">吞噬大数据存储领域新机制——NoSQL模式解析</string>
    <string name="title3">神舟九号：宇航员会携带什么移动应用上天？</string>
    <string name="title4">2012苹果全球开发者大会（WWDC）12日开幕</string>
    <string name="title5">Win8说：请把PC丢出窗外！</string>
    <string name="app_upgrade_download_sucess">下载完毕</string>
    <string name="app_upgrade_download_fail">下载失败</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="title_activity_hos_detail">HosDetail</string>
    <string name="title_activity_write_daily_info">WriteDailyInfo</string>
    <string name="title_activity_info_display">InfoDisplay</string>
    <string name="title_activity_activities">Activities</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_week_rep">WeekRepActivity</string>
    <string name="title_activity_month_rep">MonthRepActivity</string>
    <string name="title_activity_sales">SalesActivity</string>
    <string name="title_activity_sale_detail">SaleDetailActivity</string>
    <string name="title_activity_exam_detail">ExamDetailActivity</string>
    <string name="title_activity_figure_detail">FigureDetail</string>
    <string name="title_activity_share">ShareActivity</string>
<string name="choose_format_title">Choose Audio Format</string>
<string name="start_recording">Record</string>
<string name="stop_recording">StopR</string>
<string name="start_tracking">Track</string>
<string name="stop_tracking">StopT</string>
<string name="audio_format">Format</string>
<string name="radio1_op1">双声道</string>
  <string name="radio1_op2">单声道</string>
  <string name="radio2_op1">4.4K Hz</string>
  <string name="radio2_op2">22050 Hz</string>
  <string name="radio2_op3">11025 Hz</string>
  <string name="radio3_op1">PCM/16BIT</string>
  <string name="radio3_op2">PCM/8BIT</string>
</resources>